# surplussync-platform

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: platform-validation.yml
apps/web/: .env.example  README.md  package.json
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  IMPACT_METHODOLOGY.md  LIMITATIONS.md  MODEL_CARD.md  QUICKSTART.md  RESPONSIBLE_AI.md  SECURITY.md  SOURCE_PROVENANCE.md  SYNTHETIC_DATA.md  TESTING.md  TROUBLESHOOTING.md
scripts/: start.ps1  stop.ps1  test-all.ps1  verify.ps1
services/ml-api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SurplusSync_Plus_Full_Product_Spec.md  metadata.json  pyproject.toml  synthetic_school_days.csv
services/ml-api/artifacts/models/: attendance_point.cbm  attendance_q10.cbm  attendance_q90.cbm  metadata.json
services/ml-api/deployment/: start.sh
services/ml-api/docs/: ARCHITECTURE.md  DATA_SCHEMA.md  MODEL_CARD.md  SAFETY.md
services/ml-api/examples/: canonical_request.json  canonical_response.json  noncanonical_request.json  what_if_request.json
services/ml-api/src/surplussync_ml/: __init__.py  bootstrap.py  canonical.py  config.py  contracts.py  features.py
services/ml-api/src/surplussync_ml/api/: main.py
services/ml-api/src/surplussync_ml/data/: synthetic.py
services/ml-api/src/surplussync_ml/modeling/: service.py  train.py
services/ml-api/tests/: test_api.py  test_api_contract.py  test_canonical.py  test_canonical_what_if.py  test_model_availability.py  test_synthetic.py  test_training.py
(+132 files in other folders)
